kubernetes/apps/observability/loki/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:
  parentRefs:
    - name: internal
      namespace: network
      kind: Gateway
  hostnames:
    - "${APP}.${ROOT_DOMAIN}"
  rules:
    - backendRefs:
        - name: loki
          port: 3100
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authenticated-user
